...
            setLoading(false);
        }
    }

    return (
        <View style={styles.container}>
            <Title style={styles.title}>Criar Conta</Title>
            <View style={styles.form}>
                <TextInput
                    label="Nome Completo"
                    left={<TextInput.Icon icon="account" />}
                    onChangeText={(text) => setFullName(text)}
                    value={fullName}
                    style={styles.input}
                />
                <TextInput
...
